; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_clinat.c_copy_client_nat_option_list.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_clinat.c_copy_client_nat_option_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client_nat_option_list = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @copy_client_nat_option_list(%struct.client_nat_option_list* %0, %struct.client_nat_option_list* %1) #0 {
  %3 = alloca %struct.client_nat_option_list*, align 8
  %4 = alloca %struct.client_nat_option_list*, align 8
  %5 = alloca i32, align 4
  store %struct.client_nat_option_list* %0, %struct.client_nat_option_list** %3, align 8
  store %struct.client_nat_option_list* %1, %struct.client_nat_option_list** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %24, %2
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %4, align 8
  %9 = getelementptr inbounds %struct.client_nat_option_list, %struct.client_nat_option_list* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %6
  %13 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %3, align 8
  %14 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %4, align 8
  %15 = getelementptr inbounds %struct.client_nat_option_list, %struct.client_nat_option_list* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = call i32 @add_entry(%struct.client_nat_option_list* %13, i32* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %12
  br label %27

23:                                               ; preds = %12
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %5, align 4
  br label %6

27:                                               ; preds = %22, %6
  ret void
}

declare dso_local i32 @add_entry(%struct.client_nat_option_list*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
